--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,88 @@
+absl-py==2.1.0
+astroid==3.3.5
+astunparse==1.6.3
+attrs==24.2.0
 blinker==1.9.0
+certifi==2024.8.30
+charset-normalizer==3.4.0
 click==8.1.7
+contourpy==1.3.1
+cycler==0.12.1
+dill==0.3.9
+docx2txt==0.8
+et_xmlfile==2.0.0
+flake8==7.1.1
 Flask==3.0.3
+flatbuffers==24.3.25
+fonttools==4.55.0
+gast==0.6.0
+gitdb==4.0.11
+GitPython==3.1.43
+google-pasta==0.2.0
+greenlet==3.1.1
+grpcio==1.68.0
+h5py==3.12.1
+idna==3.10
 iniconfig==2.0.0
+isort==5.13.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
+joblib==1.4.2
+jsonlines==4.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2024.10.1
+keras==3.7.0
+kiwisolver==1.4.7
+libclang==18.1.1
+lint==1.2.1
+Markdown==3.7
+markdown-it-py==3.0.0
 MarkupSafe==3.0.2
-numpy==2.1.3
+matplotlib==3.9.2
+mccabe==0.7.0
+mdurl==0.1.2
+ml-dtypes==0.4.1
+namex==0.0.8
+numpy==2.0.2
+openpyxl==3.1.5
+opt_einsum==3.4.0
+optree==0.13.1
 packaging==24.2
 pandas==2.2.3
 pillow==11.0.0
+platformdirs==4.3.6
 pluggy==1.5.0
+protobuf==5.29.0
+pycodestyle==2.12.1
+pyflakes==3.2.0
+Pygments==2.18.0
+pylint==3.3.1
+pyparsing==3.2.0
 pypdf==5.1.0
 pytesseract==0.3.13
 pytest==8.3.3
 pytest-mock==3.14.0
 python-dateutil==2.9.0.post0
 pytz==2024.2
+referencing==0.35.1
+requests==2.32.3
+rich==13.9.4
+rpds-py==0.21.0
+scikit-learn==1.5.2
+scipy==1.14.1
+seaborn==0.13.2
+setuptools==75.6.0
 six==1.16.0
+smmap==5.0.1
+tensorboard==2.18.0
+tensorboard-data-server==0.7.2
+termcolor==2.5.0
+threadpoolctl==3.5.0
+tomlkit==0.13.2
+typing_extensions==4.12.2
 tzdata==2024.2
+urllib3==2.2.3
 Werkzeug==3.1.3
+wheel==0.45.1
+wrapt==1.17.0
+xgboost==2.1.3
