--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -25,6 +25,7 @@ jobs:
         python-version: "3.12.0"
     - name: Install dependencies
       run: |
+        sudo apt install tesseract-ocr
         python -m pip install --upgrade pip
         pip install flake8
         pip install -r requirements.txt
